--- a/backend/src/main/webapp/app/views/working/search.html
+++ b/backend/src/main/webapp/app/views/working/search.html
@@ -22,7 +22,12 @@
 					  </div>
 					
 					  <div class="form-group input-group col-xs-3">
-					   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
+					   	<span class="input-group-addon" ng-hide="isShowSearchField"><i class="fa fa-search"></i></span>
+					   	<span class="input-group-addon" ng-show="isShowSearchField">
+						    <select name="column" class="form-control input-group-addon" style="height: 20px; padding: 0;" ng-model="formData.searchField" ng-options="option.columnName as (option.columnNameAlias || option.columnName) for option in headers | filter:{'dataType': 'str' }">
+						    	<option value="">--ทั้งหมด--</option>
+						    </select>
+					   	</span>
 					    <input type="text" class="form-control" placeholder="keyword search" ng-model="formData.keyword">
 					  </div>
 					  <div class="input-group input-daterange">
