--- a/backend/src/main/webapp/app/views/dealer/main.html
+++ b/backend/src/main/webapp/app/views/dealer/main.html
@@ -1,14 +1,14 @@
 <div>
 	<div class="row">
 		<div class="col-md-12">
-			<h3 class="page-header"><i class="fa fa-university fa-fw"></i> Dealer</h3>
+			<h3 class="page-header"><i class="fa fa-university fa-fw"></i> Dealers</h3>
 		</div>
 	</div>
 	
     <div class="row">
         <div class="col-md-12">
             <div class="panel panel-green" style="border-color: #98b799;">
-            	<div class="panel-heading" style="background-color: #98b799; border-color: #98b799; color: black;">Dealer List</div>
+            	<div class="panel-heading" style="background-color: #98b799; border-color: #98b799; color: black;">Dealers List</div>
                 <div class="panel-body" style="padding: 3px;">
                 	<table class="table table-hover" id="tbSortable">
 					    <thead>
