--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -1,58 +1,89 @@
-<div>
-	<div class="col-lg-6">
-		<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate>
-			<div class="form-inline" ng-hide="isEdit">
-				<label>{{'user.addpage.auto_gen' | translate}}</label>
-				<input type="checkbox" value="" ng-model="autoGen" ng-change="autoGenEvent()">
+<form name="addUserForm" role="addUserForm" ng-submit="isEdit ? update() : save()" novalidate style="margin-top: 15px; color: #337AB7;">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="form-group" ng-class="{'has-error':addUserForm.userNameShow.$invalid || existingUserShowErrMsg}">
+						<label class="control-label">{{'user.addpage.username_show' | translate}} *</label>
+						<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
+							<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
+						</span>
+						<input name="userNameShow" class="form-control" ng-model="user.showname" ng-change="existingUserShowErrMsg = null" required>
+					</div>
+					<div class="form-group" ng-class="{'has-error':addUserForm.userName.$invalid || existingUserErrMsg}">
+						<label class="control-label">{{'user.addpage.username' | translate}} *</label>
+						<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
+							<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
+						</span>
+						<input name="userName" class="form-control" ng-model="user.username" ng-change="existingUserErrMsg = null" required>
+					</div>
+					<div class="form-group" ng-class="{'has-error':addUserForm.password.$invalid}">
+						<label class="control-label">{{'user.addpage.password' | translate}} *</label>
+						<input name="password" class="form-control" type="password" ng-model="user.password" ng-required="!isEdit">
+					</div>
+					<div class="form-group" ng-class="{'has-error':addUserForm.repassword.$invalid || notMatchRepassErrMsg}">
+						<label class="control-label">{{'user.addpage.re_type_password' | translate}} *</label>
+						<span class="text-danger" ng-show="notMatchRepassErrMsg" style="position: absolute; right: 0px;">
+							<i class='fa fa-warning fa-fw'></i><em>{{ notMatchRepassErrMsg }}</em>
+						</span>
+						<input name="repassword" class="form-control" type="password" ng-model="user.reTypePassword" 
+						       ng-change="notMatchRepassErrMsg = null" ng-required="!isEdit">
+					</div>
+					<div class="form-group" ng-class="{'has-error':addUserForm.roles.$invalid}">
+						<label class="control-label">สิทธิ์ *</label>
+						<select name="roles" class="form-control" ng-model="user.authorities[0].authority" ng-change="authoritySelected()" required>
+							<option value="">--เลือกสิทธิ์--</option>
+					      	<option ng-selected="{{ user.authorities[0].authority == option.authority }}" 
+					      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
+					    </select>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group" ng-class="{'has-error':addUserForm.firstName.$invalid}">
+						<label class="control-label">ชื่อ</label>
+						<div class="input-group">
+							<div class="input-group-btn">
+						        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ titleShow }} <span class="caret"></span></button>
+						        <ul class="dropdown-menu">
+						          <li ng-repeat="t in nameTitles"><a href="" ng-click="changeTitle(t)">{{ t }}</a></li>
+						        </ul>
+							</div>						
+							<input name="firstName" class="form-control" ng-model="user.firstName" required>
+						</div>
+					</div>
+					<div class="form-group" ng-class="{'has-error':addUserForm.lastName.$invalid}">
+						<label class="control-label">สกุล</label>
+						<input name="lastName" class="form-control" ng-model="user.lastName">
+					</div>
+					<div class="form-group" ng-class="{'has-error': addUserForm.image.$invalid}">
+						<label class="control-label">รูป (Thumbnail)</label>
+						<code style="position: absolute; right: 15px;"><em>*ไม่เกิน 1 MB</em></code>
+						<input tabindex="9" class="form-control" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
+						       ng-model="user.imgUpload" maxsize="1000" base-sixty-four-input accept=".png,.jpg,.gif" />
+						<span class="text-danger" ng-show="addUserForm.image.$error.maxsize">
+							<i class='fa fa-warning fa-fw'></i><small><em>ขนาดไฟล์เกินที่กำหนด</em></small>
+						</span>
+					</div>
+					<div class="form-group">
+		                 <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
+		                 <label class="radio-inline">
+		                     <input type="radio" name="userStatus" value="true" ng-checked="user.enabled == true" ng-model="user.enabled">{{'user.addpage.status.enable' | translate}}
+		                 </label>
+		                 <label class="radio-inline">
+		                     <input type="radio" name="userStatus" value="false" ng-checked="user.enabled == false" ng-model="user.enabled">{{'user.addpage.status.disable' | translate}}
+		                 </label>
+		             </div>
+				</div>
 			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.userNameShow.$invalid || existingUserShowErrMsg}">
-				<label class="control-label">{{'user.addpage.username_show' | translate}} *</label>
-				<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
-					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserShowErrMsg }}</em>
-				</span>
-				<input name="userNameShow" class="form-control" ng-model="user.userNameShow" ng-change="existingUserShowErrMsg = null" ng-disabled="autoGen" required>
+		</div>
+		<div class="col-md-2">
+			<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" style="height: 110px;" ng-show="imageSource">		
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<div style="text-align: center;">
+					<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">Clear</button>
+					<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addUserForm.$invalid">Save</button>
+				</div>
 			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.userName.$invalid || existingUserErrMsg}">
-				<label class="control-label">{{'user.addpage.username' | translate}} *</label>
-				<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
-					<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
-				</span>
-				<input name="userName" class="form-control" ng-model="user.userName" ng-change="existingUserErrMsg = null" ng-disabled="autoGen" required>
-			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.password.$invalid}">
-				<label class="control-label">{{'user.addpage.password' | translate}} *</label>
-				<input name="password" class="form-control" type="password" ng-model="user.password" ng-disabled="isEdit || autoGen" ng-required="!isEdit">
-				<p class="help-block" ng-show="autoGen">{{'user.addpage.generated_password_msg' | translate}} {{ user.password }}</p>
-			</div>
-			<div class="form-group" ng-show="!autoGen" ng-class="{'has-error':addUserForm.repassword.$invalid || notMatchRepassErrMsg}">
-				<label class="control-label">{{'user.addpage.re_type_password' | translate}} *</label>
-				<span class="text-danger" ng-show="notMatchRepassErrMsg" style="position: absolute; right: 0px;">
-					<i class='fa fa-warning fa-fw'></i><em>{{ notMatchRepassErrMsg }}</em>
-				</span>
-				<input name="repassword" class="form-control" type="password" ng-model="user.reTypePassword" 
-				ng-change="notMatchRepassErrMsg = null" ng-disabled="isEdit" ng-required="!isEdit && !autoGen">
-			</div>
-			<div class="form-group" ng-class="{'has-error':addUserForm.roles.$invalid}">
-				<label class="control-label">{{'user.addpage.role' | translate}} *</label>
-				<select name="roles" class="form-control" ng-model="user.roles[0].authority" required>
-					<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-			      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
-			      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
-			    </select>
-			</div>
-			<div class="form-group">
-                 <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
-                 <label class="radio-inline">
-                     <input type="radio" name="userStatus" value="1" ng-checked="user.enabled == 1" ng-model="user.enabled">{{'user.addpage.status.enable' | translate}}
-                 </label>
-                 <label class="radio-inline">
-                     <input type="radio" name="userStatus" value="0" ng-checked="user.enabled == 0" ng-model="user.enabled">{{'user.addpage.status.disable' | translate}}
-                 </label>
-             </div>
-			<div style="text-align: center;">
-				<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">{{'user.addpage.celar_btn' | translate}}</button>
-				<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addUserForm.$invalid">{{ persisBtn }}</button>
-			</div>
-		</form>
-	</div>
-</div>
+		</div>
+</form>
