--- a/backend/src/main/webapp/app/views/user/main.html
+++ b/backend/src/main/webapp/app/views/user/main.html
@@ -1,20 +1,20 @@
 <div>
 	<div class="row">
-		<div class="col-lg-12">
-			<h1 class="page-header">{{'user.header_title' | translate}}</h1>
+		<div class="col-md-12">
+			<h3 class="page-header"><i class="fa fa-users fa-fw"></i> Users</h3>
 		</div>
 	</div>
 	
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-users fa-fw"></i> {{ headerTitle }}
-                    <button type="button" class="btn btn-warning btn-circle btn-lg" style="position: absolute; right: 0px;" ng-click="gotoSelected()">
+                    <i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
+                    <button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
                     	<i class="fa" ng-class="iconBtn"></i>
                     </button>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="padding: 3px;">
                 
                 	<div ui-view></div>
                 	
