--- a/backend/src/main/webapp/app/styles/main.css
+++ b/backend/src/main/webapp/app/styles/main.css
@@ -105,8 +105,24 @@ body {
 	text-shadow: 1px 1px black;
 }
 h3.page-header {
-	color: #85a985;
-	text-shadow: 1px 1px black;
+	color: #2C2B2B;
+	text-shadow: 1px 1px #bbbaba;
+}
+
+/* Gambler Panel */
+.gambler-panel {
+	border-color: #2C2B2B;
+	color: #cccccc;
+}
+.gambler-panel .panel-heading {
+	background-color: #2C2B2B; 
+	border-color: #2C2B2B; 
+}
+.gambler-panel .panel-body {
+	background-color: #525151; 
+}
+.gambler-panel tbody tr:hover td {
+	background-color: #5f5f5f; 
 }
 
 
