--- a/backend/src/main/webapp/app/views/home/main.html
+++ b/backend/src/main/webapp/app/views/home/main.html
@@ -7,8 +7,8 @@
 	                
 	<div class="row">
 		<div class="col-md-12">
-			<div class="panel panel-green" style="border-color: #98b799;">
-                <div class="panel-heading" style="background-color: #98b799; border-color: #98b799; color: black;">หน้าหลัก</div>
+			<div class="panel gambler-panel">
+                <div class="panel-heading">หน้าหลัก</div>
                 <div class="panel-body">
                 	Home
                 </div>
