--- a/backend/src/main/webapp/app/views/dealer/main.html
+++ b/backend/src/main/webapp/app/views/dealer/main.html
@@ -7,8 +7,8 @@
 	
     <div class="row">
         <div class="col-md-12">
-            <div class="panel panel-green" style="border-color: #98b799;">
-            	<div class="panel-heading" style="background-color: #98b799; border-color: #98b799; color: black;">Dealers List</div>
+            <div class="panel gambler-panel">
+            	<div class="panel-heading">Dealers List</div>
                 <div class="panel-body" style="padding: 3px;">
                 	<table class="table table-hover" id="tbSortable">
 					    <thead>
@@ -26,9 +26,9 @@
 								<td>{{ d.createdDateTime | date:'dd/MM/yyyy HH:mm:ss' }}</td>
 								<td>{{ d.name }}</td>
 								<td>
-									<i class="fa fa-lg" ng-class="{'fa-check-circle-o': d.enabled, 'fa fa-minus-circle': !d.enabled}" ng-style="d.enabled ? {'color':'green'} : {'color':'red'}"></i>
+									<i class="fa fa-lg" ng-class="{'fa-check-circle-o': d.enabled, 'fa fa-minus-circle': !d.enabled}"></i>
 								</td>
-								<td style="color: green;">
+								<td>
 									<i class="fa fa-pencil-square-o fa-lg" style="cursor: pointer;" ng-click="addEdit(d)"></i>&nbsp;&nbsp;&nbsp;
 									<i class="fa fa-times fa-lg" style="cursor: pointer;" ng-click="remove(d.id)"></i>
 								</td>
