--- a/backend/src/main/webapp/app/views/receiver/main.html
+++ b/backend/src/main/webapp/app/views/receiver/main.html
@@ -19,8 +19,8 @@
 	                
 	<div class="row">
 		<div class="col-md-6">
-			<div class="panel panel-green" style="border-color: #98b799;">
-                <div class="panel-heading" style="background-color: #98b799; border-color: #98b799; color: black;">ข้อมูลผู้รับ</div>
+			<div class="panel gambler-panel">
+                <div class="panel-heading">ข้อมูลผู้รับ</div>
                 <div class="panel-body">
             		<table class="table table-hover" id="tbSortable">
 					    <thead>
