--- a/backend/src/main/webapp/app/views/user/main.html
+++ b/backend/src/main/webapp/app/views/user/main.html
@@ -7,10 +7,10 @@
 	
     <div class="row">
         <div class="col-md-12">
-            <div class="panel panel-primary">
+            <div class="panel gambler-panel">
                 <div class="panel-heading">
                     <i class="fa fa-list-alt fa-fw"></i> {{ headerTitle }}
-                    <button type="button" class="btn btn-info btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
+                    <button type="button" class="btn btn-success btn-circle btn-lg" style="position: absolute; right: 0px; top: -5px;" ng-click="gotoSelected()">
                     	<i class="fa" ng-class="iconBtn"></i>
                     </button>
                 </div>
@@ -19,7 +19,6 @@
                 	<div ui-view></div>
                 	
                 </div>
-                <div class="panel-footer"></div>
             </div>
         </div>
     </div>
