--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -9,13 +9,13 @@
 .has-error.checkbox-inline label, 
 .has-error.radio label, 
 .has-error.radio-inline label {
-	color: #5cb85c;
+	color: #5bc0de;
 }
 .has-error .form-control {
-	border-color: #5cb85c;
+	border-color: #5bc0de;
 }
 .has-error .form-control:focus {
-	border-color: #5cb85c;
+	border-color: #5bc0de;
 }
 .text-danger {
 	color: #f29c21;
@@ -105,8 +105,8 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div style="text-align: center;">
-					<button type="button" class="btn btn-outline btn-success" ng-click="clear()">Clear</button>
-					<button type="submit" class="btn btn-outline btn-success" ng-disabled="addUserForm.$invalid">Save</button>
+					<button type="button" class="btn btn-outline btn-default" ng-click="clear()">Clear</button>
+					<button type="submit" class="btn btn-outline btn-info" ng-disabled="addUserForm.$invalid">Save</button>
 				</div>
 			</div>
 		</div>
