--- a/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
+++ b/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
@@ -12,7 +12,7 @@
 				<div class="form-group input-group pull-right" style="z-index: 1000; margin: 0;">
 					<i class="fa fa-download fa-2x" style="cursor: pointer; color: #2071b6; margin: 5px 5px 0 0;" title="Download" ng-click="exportOrder(rc.id)"></i>
 				</div>
-				<div class="form-horizontal" style="margin-bottom: 5px; border-radius: 5px; background-color: #85a985; padding-bottom: 5px; padding-left: 10px; border: .5px solid #ffffffa6;">
+				<div class="form-horizontal" style="margin-bottom: 5px; border-radius: 5px; background-color: #2C2B2B; padding-bottom: 5px; padding-left: 10px; border: .5px solid #ffffffa6;">
 					<div class="checkbox">
 						<label>
 					      <input type="checkbox" ng-model="chkbox.checkBoxTypeAll" ng-true-value="true" ng-false-value="false" ng-change="checkBoxTypeAllFn()"> All
@@ -64,9 +64,9 @@
 							dnd-moved="orderData[rc.id].splice($index, 1)" 
 							dnd-effect-allowed="move">
 					
-							<td style="width: 8%; font-size: 12px;">{{ $index + 1 }})</td>
-							<td style="width: 17%; font-size: 12px;">{{ ord.createdDateTime | date:'dd/MM HH:mm' }}</td>
-							<td style="width: 29%; font-size: 12px;">{{ ord.name }}</td>
+							<td style="width: 8%; font-size: 12px; min-height: 36px;">{{ $index + 1 }})</td>
+							<td style="width: 17%; font-size: 12px; min-height: 36px;">{{ ord.createdDateTime | date:'dd/MM HH:mm' }}</td>
+							<td style="width: 29%; font-size: 12px; min-height: 36px;">{{ ord.name }}</td>
 							<td style="width: 30%">{{ ord.symBol }}</td>
 							<td style="width: 16%;">{{ ord.note || '&nbsp;' }}</td>
 						</tr>
@@ -92,7 +92,7 @@
 				<div class="row animate__animated" style="margin-top: 20px; padding-left: 5px; padding-right: 5px;" 
 				ng-class="{'animate__fadeInDown': restricted.isSettingShow, 'animate__fadeOutUp': !restricted.isSettingShow}"
 				ng-show="restricted.isSettingShow">
-					<div class="col-md-12" style="background-color: #a2bea2; padding-top: 15px; border: 1px solid #3c763d70; border-radius: 20px;">
+					<div class="col-md-12" style="background-color: #5bc0de; color: black; padding-top: 15px; border: 1px solid #3c763d70; border-radius: 20px;">
 						<div>
 							<span>
 								<strong>ตั้งค่าตัวเลขที่ <span style="text-decoration: underline;">ปิด หรือ จ่ายครึ่งราคา</span></strong>
@@ -146,9 +146,11 @@
 			<div class="tab-pane fade" id="profile-pills" ng-class="{'active in': tabActived == 6}">
 				<div>
 				
-					<div class="panel panel-default result-panel" style="margin-bottom: 5px;" ng-repeat="resG in resultGroup1[rc.id]">
+					<div class="panel panel-default" style="margin-bottom: 5px; background-color: #2C2B2B;" ng-repeat="resG in resultGroup1[rc.id]">
 		            	<div class="panel-body">
-                        		<div><span class="pull-right" style="font-weight: 700; text-decoration: underline;">{{ resG.title }}</span></div>
+                        		<div>
+                        			<span class="label label-primary" style="font-size: 100%; color: black;">{{ resG.title }}</span>
+                        		</div>
 	                         <table class="table table-hover">
 								<thead>
 									<tr>
@@ -158,7 +160,7 @@
 										<td>ราคาจ่าย</td>
 									</tr>
 								</thead>
-								<tbody>
+								<tbody style="background-color: #525151;">
 									<tr ng-repeat="res in resG.result">
 										<td>{{ $index + 1 }}</td>
 										<td>{{ res._id }}</td>
@@ -167,7 +169,7 @@
 									</tr>
 									<tr ng-show="resG.result.length == 0">
 										<td colspan="4" style="text-align: center;">
-											<i class="fa fa-ban fa-3x" style="color: red;"></i>
+											<i class="fa fa-ban fa-lg" style="color: #f56c6c;"></i>
 										</td>
 									</tr>
 								</tbody>
@@ -175,9 +177,11 @@
 		                </div>
 					</div>
 
-					<div class="panel panel-default result-panel" style="margin-bottom: 5px;" ng-repeat="resG in resultGroup2[rc.id]">
+					<div class="panel panel-default" style="margin-bottom: 5px; background-color: #2C2B2B;" ng-repeat="resG in resultGroup2[rc.id]">
 		            	<div class="panel-body">
-                        		<div><span class="pull-right" style="font-weight: 700; text-decoration: underline;">{{ resG.title }}</span></div>
+                        		<div>
+                        			<span class="label label-primary" style="font-size: 100%; color: black;">{{ resG.title }}</span>
+                        		</div>
 	                         <table class="table table-hover">
 								<thead>
 									<tr>
@@ -188,7 +192,7 @@
 										<td>ราคาจ่าย</td>
 									</tr>
 								</thead>
-								<tbody>
+								<tbody style="background-color: #525151;">
 									<tr>
 										<tr ng-repeat="res in resG.result">
 										<td>{{ $index + 1 }}</td>
@@ -199,7 +203,7 @@
 									</tr>
 									<tr ng-show="resG.result.length == 0">
 										<td colspan="5" style="text-align: center;">
-											<i class="fa fa-ban fa-3x" style="color: red;"></i>
+											<i class="fa fa-ban fa-lg" style="color: #f56c6c;"></i>
 										</td>
 									</tr>
 								</tbody>
