--- a/backend/src/main/webapp/app/views/user/add.html
+++ b/backend/src/main/webapp/app/views/user/add.html
@@ -78,7 +78,7 @@
 						<label class="control-label">สกุล</label>
 						<input name="lastName" class="form-control" ng-model="user.lastName">
 					</div>
-					<div class="form-group" ng-class="{'has-error': addUserForm.image.$invalid}">
+					<!-- <div class="form-group" ng-class="{'has-error': addUserForm.image.$invalid}">
 						<label class="control-label">รูป (Thumbnail)</label>
 						<code style="position: absolute; right: 15px;"><em>*ไม่เกิน 1 MB</em></code>
 						<input tabindex="9" class="form-control" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
@@ -86,7 +86,7 @@
 						<span class="text-danger" ng-show="addUserForm.image.$error.maxsize">
 							<i class='fa fa-warning fa-fw'></i><small><em>ขนาดไฟล์เกินที่กำหนด</em></small>
 						</span>
-					</div>
+					</div> -->
 					<div class="form-group">
 		                 <label>{{'user.addpage.status' | translate}} &nbsp;&nbsp;</label>
 		                 <label class="radio-inline">
