--- a/backend/src/main/webapp/app/views/home/main.html
+++ b/backend/src/main/webapp/app/views/home/main.html
@@ -9,7 +9,7 @@
 		<div class="col-md-6 col-md-offset-3">
 			
 			<div class="panel gambler-panel" style="background-color: #4186b7;">
-					<div class="panel-heading" style="text-align: center;">
+					<div class="panel-heading" style="text-align: center; background-color: #2c2b2bc7;">
                     	<label class="ng-binding" style="color: #ffd12b;">{{ workingOnDealer.id ? workingOnDealer.name : "&nbsp;" }}</label>
                     </div>
                        <div class="panel-body" style="background-color: #0c0c0c36; border-radius: 154px;">
