--- a/backend/src/main/webapp/app/views/home/main.html
+++ b/backend/src/main/webapp/app/views/home/main.html
@@ -12,9 +12,9 @@
 					<div class="panel-heading" style="text-align: center; background-color: #2c2b2bc7;">
                     	<label class="ng-binding" style="color: #ffd12b;">{{ workingOnDealer.id ? workingOnDealer.name : "&nbsp;" }}</label>
                     </div>
-                       <div class="panel-body" style="background-color: #0c0c0c36; border-radius: 154px;">
+                       <div class="panel-body" style="background-color: #0c0c0c36; border-radius: 154px; margin: 1px;">
                        
-						<div style="text-align: center; margin-bottom: 15px;">
+						<div style="text-align: center; margin: 5px 0 25px 0;">
 							<img id="photo" class="img-thumbnail" ng-src="{{ photoSource }}" ng-show="photoSource" 
 							     style="height: 42px; background-color: #ffffff00; border-color: #c5a611; border-radius: 22px;">
 						</div>
