--- a/backend/src/main/webapp/app/views/dashboard/main.html
+++ b/backend/src/main/webapp/app/views/dashboard/main.html
@@ -1,4 +1,4 @@
-<div id="wrapper">
+<div id="wrapper" style="background: linear-gradient(0deg, rgb(57 76 84) 0%, rgb(84 108 123) 100%);">
 
         <!-- Navigation -->
             
@@ -8,7 +8,9 @@
                
         <!-- /.navbar-static-side -->
 
-            <div id="page-wrapper" style="min-height: 561px;">
+            <!-- <div id="page-wrapper" style="min-height: 561px; background-color: #95710ba6; border-radius: 0 15px 15px 0;"> -->
+            <div id="page-wrapper" style="min-height: 561px; border-radius: 0 0 15px 0;
+            background: linear-gradient(0deg, rgb(11 12 12 / 41%) 0%, rgb(121, 162, 186) 100%);">
 
                 <div ui-view></div>
                 
