--- a/backend/src/main/webapp/app/views/dealer/main.html
+++ b/backend/src/main/webapp/app/views/dealer/main.html
@@ -10,7 +10,7 @@
             <div class="panel gambler-panel">
             	<div class="panel-heading">Dealers List</div>
                 <div class="panel-body" style="padding: 3px;">
-                	<table class="table table-hover" id="tbSortable">
+                	<table class="table table-hover gambler-panel" id="tbSortable">
 					    <thead>
 							<tr>
 								<th>#</th>
