--- a/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
+++ b/backend/src/main/webapp/app/views/manageOrder/orderGroup.html
@@ -44,7 +44,7 @@
 					</div>
 				</div>
 				
-				<table class="table table-hover result-panel table-fixed" style="">
+				<table class="table table-hover result-panel table-fixed gambler-panel">
 					<thead>
 						<tr>
 							<th style="width: 8%">#</th>
@@ -120,7 +120,7 @@
 											                     							tabActived == 4 || tabActived == 41 || tabActived == 42 || 
 											                     							tabActived == 43 || tabActived == 44 || tabActived == 5}">
 											                     							
-				<table class="table table-hover result-panel table-fixed">
+				<table class="table table-hover result-panel table-fixed gambler-panel">
 					<thead>
 						<tr>
 							<th style="width: 15%">#</th>
@@ -151,7 +151,7 @@
                         		<div>
                         			<span class="label label-primary" style="font-size: 100%; color: black;">{{ resG.title }}</span>
                         		</div>
-	                         <table class="table table-hover">
+	                         <table class="table table-hover gambler-panel">
 								<thead>
 									<tr>
 										<td>#</td>
@@ -182,7 +182,7 @@
                         		<div>
                         			<span class="label label-primary" style="font-size: 100%; color: black;">{{ resG.title }}</span>
                         		</div>
-	                         <table class="table table-hover">
+	                         <table class="table table-hover gambler-panel">
 								<thead>
 									<tr>
 										<td>#</td>
