--- a/backend/src/main/webapp/app/views/order/main.html
+++ b/backend/src/main/webapp/app/views/order/main.html
@@ -268,7 +268,7 @@
 												 </div>
 											 </div>
 											
-											  <table class="table table-hover result-panel table-fixed">
+											  <table class="table table-hover result-panel table-fixed gambler-panel">
 											    <thead>
 											      <tr>
 														<th style="width: 12%">#</th>
@@ -310,7 +310,7 @@
 					                     							tabActived == 4 || tabActived == 41 || tabActived == 42 || 
 					                     							tabActived == 43 || tabActived == 44 || tabActived == 5}">
 												
-					                         <table class="table table-hover result-panel table-fixed" style="margin-top: 5px;">
+					                         <table class="table table-hover result-panel table-fixed gambler-panel" style="margin-top: 5px;">
 												<thead>
 													<tr>
 														<th style="width: 15%">#</th>
@@ -342,7 +342,7 @@
 						                         		<div>
 						                         			<span class="label label-primary" style="font-size: 100%; color: black;">{{ resG.title }}</span>
 						                         		</div>
-								                         <table class="table table-hover">
+								                         <table class="table table-hover gambler-panel">
 															<thead>
 																<tr>
 																	<td>#</td>
@@ -373,7 +373,7 @@
 						                         		<div>
 						                         			<span class="label label-primary" style="font-size: 100%; color: black;">{{ resG.title }}</span>
 						                         		</div>
-								                         <table class="table table-hover">
+								                         <table class="table table-hover gambler-panel">
 															<thead>
 																<tr>
 																	<td>#</td>
