--- a/backend/src/main/webapp/app/styles/main.css
+++ b/backend/src/main/webapp/app/styles/main.css
@@ -12,6 +12,10 @@
     font-style: normal;
 }
 
+html {
+	background-color: #222629;
+}
+
 body {
     padding-bottom: 20px;
     font-family: 'FrankRuhlLibre','cs-chatthai';
@@ -107,6 +111,7 @@ body {
 h3.page-header {
 	color: #2C2B2B;
 	text-shadow: 1px 1px #bbbaba;
+	border-bottom: 1px solid #5b7280;
 }
 
 /* Gambler Panel */
@@ -121,7 +126,7 @@ h3.page-header {
 .gambler-panel >.panel-body {
 	background-color: #525151; 
 }
-.gambler-panel tbody tr:hover td {
+.gambler-panel > tbody tr:hover td {
 	background-color: #5f5f5f; 
 }
 
