--- a/backend/src/main/webapp/app/views/login.html
+++ b/backend/src/main/webapp/app/views/login.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Gambler Login</h3>
+        <div class="col-md-6 col-md-offset-3">
+            <div class="login-panel panel panel-default" style="border-color: #d59d37;">
+                <div class="panel-heading" style="background-color: #495f6c; color: #f4bf41; text-align: center; border-color: #ce9c3d;">
+                    <h1 class="panel-title" style="font-size: 20px;">Gambler Login</h1>
                 </div>
-                <div class="panel-body">
+                <div class="panel-body" style="background-color: #495f6c; padding: 30px 30px 30px 30px;">
                     <form role="form" ng-submit="login()" name="loginForm">
                         <fieldset>
                             <div class="form-group">
@@ -20,11 +20,11 @@
                                     <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                 </label>
                             </div> -->
-                            <button class="btn btn-lg btn-success btn-block" ng-disabled="loginForm.$invalid">{{ 'login.login_btn' | translate }}</button>
+                            <button class="btn btn-info btn-block" ng-disabled="loginForm.$invalid">{{ 'login.login_btn' | translate }}</button>
                         </fieldset>
                     </form>
                 </div>
-                <div class="panel-footer"></div>
+                <!-- <div class="panel-footer"></div> -->
             </div>
         </div>
     </div>
