--- a/backend/src/main/webapp/app/views/receiver/main.html
+++ b/backend/src/main/webapp/app/views/receiver/main.html
@@ -22,7 +22,7 @@
 			<div class="panel gambler-panel">
                 <div class="panel-heading">ข้อมูลผู้รับ</div>
                 <div class="panel-body">
-            		<table class="table table-hover" id="tbSortable">
+            		<table class="table table-hover gambler-panel" id="tbSortable">
 					    <thead>
 							<tr>
 								<th>#</th>
