--- a/backend/src/main/webapp/app/views/user/search.html
+++ b/backend/src/main/webapp/app/views/user/search.html
@@ -60,7 +60,7 @@
 </div>
 
 <div class="table-responsive">	
-	<table class="table table-striped table-hover" style="margin: 0;">
+	<table class="table table-striped table-hover gambler-panel" style="margin: 0;">
 		<thead>
 			<tr style="color: #cccccc;">
 				<th>#</th>
