--- a/backend/src/main/webapp/app/views/manageOrder/main.html
+++ b/backend/src/main/webapp/app/views/manageOrder/main.html
@@ -90,7 +90,8 @@
 								<i class="fa fa-2x" ng-class="{'fa-share': $index == 0, 'fa-reply': $index == 1}" style="color: #337ab7; cursor: pointer;" 
 								title="ย้ายข้อมูลการซื้อ"
 								ng-click="moveOrder($index)"></i>
-							</div>				
+							</div>
+							<div style="clear: both;"></div>				
 						</div>
 					</div>		
 				</div>
