--- a/backend/src/main/webapp/app/styles/main.css
+++ b/backend/src/main/webapp/app/styles/main.css
@@ -112,6 +112,8 @@ h3.page-header {
 	color: #2C2B2B;
 	text-shadow: 1px 1px #bbbaba;
 	border-bottom: 1px solid #5b7280;
+	margin: 5px 0 20px;
+	text-align: right;
 }
 
 /* Gambler Panel */
